<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign up</string>
    <string name="welcome_title">Welcome to Shoe Store Inventory App</string>
    <string name="welcome_description">Cherish your feet!</string>
    <string name="continue_button">Continue</string>
    <string name="instruction_title">Instruction</string>
    <string name="instruction_description">Create a list of your favorite shoes</string>
    <string name="shoe_list">Shoe list</string>
    <string name="floating_button_desc">Click to add to shoe list</string>
    <string name="logout">Log out</string>
    <string name="item_show_image_desc">Shoe image</string>
    <string name="shoe_detail_title">Shoe details</string>
    <string name="shoe_name_label">Shoe name</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="shoe_name_hint">Enter shoe name</string>
    <string name="shoe_company_label">Company</string>
    <string name="shoe_company_hint">Enter shoe company</string>
    <string name="shoe_size_label">Size</string>
    <string name="shoe_size_hint">Enter shoe size</string>
    <string name="shoe_description_label">Description</string>
    <string name="shoe_description_hint">Enter shoe description</string>
</resources>
