<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoeListViewModel"
            type="com.udacity.shoestore.screens.shoe_list.ShoeListViewModel" />
    </data>

    <!-- This layout file uses ConstraintLayout to create a responsive and flexible UI,
         and inside it is NestedScrollView with a horizontal LinearLayout, because
         constraintLayout allows for creating complex layouts with flexible positioning
         and sizing of views, and inside scroll view is the list of vertical labels and edit view -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_detail_title"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoe_detail_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/shoe_name_label"
                    style="@style/LabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_name_label"
                    android:textAlignment="viewStart" />

                <EditText
                    android:id="@+id/shoe_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/shoe_name_hint"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/shoe_name_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/shoe_company_label"
                    style="@style/LabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_company_label"
                    android:textAlignment="viewStart" />

                <EditText
                    android:id="@+id/shoe_company_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/shoe_company_hint"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/shoe_company_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/shoe_size_label"
                    style="@style/LabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_size_label"
                    android:textAlignment="viewStart" />

                <EditText
                    android:id="@+id/shoe_size_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/shoe_size_hint"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/shoe_size_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/shoe_description_label"
                    style="@style/LabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_description_label"
                    android:textAlignment="viewStart" />

                <EditText
                    android:id="@+id/shoe_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/shoe_description_hint"
                    android:inputType="textMultiLine|text"
                    android:minHeight="48dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/shoe_description_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/save_button"
            style="@style/DefaultButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/DefaultButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>